Ajustes personales al proyecto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main class="mt-5 container-lg">
-        <h2 class="text-center fs-1">Inicio</h2>
+        <h2 class="text-center fs-1"></h2>
   
         <div class="d-md-flex justify-content-md-center mt-5 ">
             <form class="card col-md-8 bg-light p-5">
